<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="24dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText android:id="@+id/emailInput" android:hint="Email"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <EditText android:id="@+id/passwordInput" android:hint="Password"
        android:inputType="textPassword"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <Button android:id="@+id/registerButton" android:text="Register"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/goToLogin" android:text="Sudah punya akun? Login"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
